--- a/public/assets/css/style-ar.css
+++ b/public/assets/css/style-ar.css
@@ -4534,4 +4534,6 @@ td:has(> button.actions) {
 
 .id-card-in-arabic {
     direction: rtl;
+    display: flex;
+    flex-direction: row-reverse;
 }
